--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "d3": "^5.0.0",
     "jasmine": "^3.1.0",
-    "jsdom": "^11.6.2"
+    "jsdom": "^11.6.2",
+    "requirejs": "^2.3.5"
   }
 }
